# pytailer

./: README.md  pyproject.toml
.github/workflows/: action.yaml
pytailer/: __init__.py  async_core.py  core.py
tests/: test_async_file_tail.py  test_file_tail.py  test_mutable_file.py  utils.py
